<resources>
    <string name="app_name">ÁrticGo</string>
    <string name="action_settings">Menu</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Nome</string>
    <string name="prompt_register">Cadastrar</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_phone">Telefone</string>
    <string name="prompt_password">Senha</string>
    <string name="prompt_confirm_password">Confirmar Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">Este endereço de e-mail é inválido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_incorrect_password">Esta senha esta incorreta</string>
    <string name="error_field_required">Informe um e-mail válido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
