<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.articgo.view.LoginActivity"
    android:gravity="center_horizontal|center"
    android:elevation="1dp"
    android:background="@drawable/fundo"
    android:paddingLeft="16dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingRight="16dp">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="false"
        android:layout_gravity="bottom"
        android:clickable="true"
        android:contextClickable="true"
        android:foregroundGravity="center_vertical">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:foregroundGravity="center_vertical">

            <ImageView
                android:layout_width="match_parent"
                app:srcCompat="@drawable/logo_transparente"
                android:id="@+id/imageView"
                android:layout_weight="0.14"
                android:layout_height="150dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:layout_marginTop="20dp">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHighlight="?attr/editTextColor"
                    android:pointerIcon="none" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="16sp"
                android:contextClickable="false" />

            <TextView
                android:text="Esqueceu sua senha?"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtEsqueceuSenha"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@android:color/white" />

            <Button
                android:text="Fazer meu cadastro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnCadastrar"
                android:layout_marginTop="25dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
